<resources>
    <string name="app_name">龙商闪送员</string>
    <string name="confirm">确定</string>
    <string name="exit">退出登录</string>

    <string name="login">登录</string>
    <string name="login_2">登 录</string>

    <string name="input_phone_number">输入手机号码</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="password">密码</string>
    <string name="input_password">输入密码</string>

    <string name="click_login">点击“登录”按钮，即表示您同意</string>
    <string name="flash_operator_service_protocol">《闪送员服务协议》</string>
    <string name="present_device_number">当前设备号：</string>
    <string name="flash_operator_enroll">闪送员报名</string>
    <string name="please_click">如果您还不是闪送员，请点击</string>
    <string name="send_identifying_code">发送验证码</string>
    <string name="please_input_your_identifying_code">请输入你的验证码</string>
    <string name="login_password">登录密码</string>
    <string name="confirm_login_password">确认登录密码</string>
    <string name="invite_code">邀请码（非必填）</string>
    <string name="submit">提 交</string>
    <string name="verify_cell_phone">验证手机</string>


    <string name="identification_photo">白底免冠证件照</string>

    <string name="upload_id_photos">上传身份证照片：</string>
    <string name="upload_front">上传正面</string>
    <string name="upload_back">上传背面</string>
    <string name="send_flash">闪送</string>
    <string name="true_name">真实姓名：</string>
    <string name="input_true_name">请输入真实姓名</string>
    <string name="bank_card">银行卡号：</string>
    <string name="bank_name">所属银行：</string>
    <string name="input_bank_card">请输入银行卡号</string>
    <string name="withdraw_number">提现金额：</string>
    <string name="withdraw_time">提现时间：</string>
    <string name="input_withdraw_number">请输入提现金额</string>
    <string name="input_id_number">输入身份证号码</string>
    <string name="input_new_password">输入新密码</string>
    <string name="reenter_the_new_password">重新输入新密码</string>
    <string name="id_number">身份证号：</string>
    <string name="data_filling">完善资料</string>
    <string name="next_step">下一步</string>
    <string name="educational_background">学历：</string>
    <string name="profession">职业：</string>
    <string name="emergency_contact">紧急联系人：</string>
    <string name="contact_phone">联系人电话：</string>
    <string name="the_detailed_address">现详细住址：</string>
    <string name="trip_mode">出行方式：</string>
    <string name="bicycle">自行车</string>
    <string name="electrombile">电动车</string>
    <string name="car">汽车</string>
    <string name="subway">地铁</string>
    <string name="bus">公交</string>
    <string name="motorcycle">摩托车</string>


    <string name="postgraduate">研究生及以上</string>
    <string name="undergraduate">本科</string>
    <string name="junior_college">专科</string>
    <string name="senior_high_school">高中</string>
    <string name="junior_high_school">初中</string>
    <string name="primary_school">小学</string>


    <string name="user_name">用户姓名</string>
    <string name="my_send_flash">我的闪送</string>
    <string name="general_income">总收入</string>
    <string name="monthly_income">本月收入</string>
    <string name="yesterday_income">昨日收入</string>
    <string name="my_order">我的订单</string>
    <string name="single">单</string>
    <string name="cash_account">现金账户</string>
    <string name="dollar">元</string>
    <string name="rewards_and_punishment_record">奖惩记录</string>
    <string name="promotion_record">推广记录</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="my_setting">设置中心</string>
    <string name="about_me">关于我们</string>
    <string name="my_genre_choose">请选择物品类型</string>
    <string name="my_genre_name">请输入物品名称</string>
    <string name="my_genre_postscript">备注信息:</string>
    <string name="my_postscript">如有特殊要求请输入备注信息</string>
    <string name="my_address">小区名/大厦名/街道门牌号</string>
    <string name="address_near">附近地址</string>
    <string name="address_history">历史地址</string>
    <string name="address_floor">楼层/门牌号</string>
    <string name="name">姓名</string>
    <string name="phone">电话</string>
    <string name="find">快速查找</string>
    <string name="next">下一步</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="city">当前定位城市是:</string>
    <string name="inputphone">请输入手机号</string>
    <string name="inputverificationcode">请输入验证码</string>
    <string name="loginpassword">请输入密码</string>
    <string name="loginrepwd">请输入新密码</string>
    <string name="login_btn">登录</string>
    <string name="find_password">忘记密码?</string>
    <string name="registerfree">立即注册</string>
    <string name="getverificationcode">获取验证码</string>
    <string name="remark">我已阅读并同意</string>
    <string name="remarkls">《龙商闪送服务条款》</string>
    <string name="my_order_for_goods">我的订单</string>
    <string name="all_orders">全部单</string>

    <string name="order_number">00000000000000</string>
    <string name="order_status">订单状态</string>
    <string name="order_price">订单价格</string>
    <string name="order_taking">接单地址:</string>
    <string name="order_taking_address">接单地址s</string>
    <string name="service">送达地址:</string>
    <string name="service_address">送达地址-saj</string>
    <string name="order_time">下单时间</string>
    <string name="you_have_no_search_orders">未搜索到订单！</string>
    <string name="you_have_no_orders">您还没有订单！</string>
    <string name="have_no_orders">暂无订单！</string>
    <string name="you_have_no_orders_in_progress">您还没有进行中订单！</string>
    <string name="you_have_no_orders_done">您还没有已完成订单！</string>
    <string name="you_have_no_orders_canceled">您还没有取消单！</string>
    <string name="search">搜索</string>
    <string name="edit_text_hint">请输入手机号或姓名</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="app_tip">提示</string>

    <string name="my_wallet">我的钱包</string>
    <string name="my_balance">我的余额（元）</string>
    <string name="zero">0</string>
    <string name="instant_recharge">立即提现</string>
    <string name="deposit_refund">退还押金</string>
    <string name="recharge">充值</string>
    <string name="phone_number">手机号</string>
    <string name="edit_digits">0123456789</string>
    <string name="edit_length">20</string>
    <string name="recharge_amount">充值金额</string>
    <string name="recharge_instruction">（充值金额无有效期限制、不可退款或转让）</string>
    <string name="one_thousand">1000</string>
    <string name="two_thousand">2000</string>
    <string name="three_thousand">3000</string>
    <string name="four_thousand">5000</string>
    <string name="custom_amount">自定义金额：</string>
    <string name="please_input_amount">请输入金额</string>
    <string name="alipay">支付宝支付</string>
    <string name="alipay_instruction">推荐有支付宝帐号的用户使用</string>
    <string name="wechat_payment">微信支付</string>
    <string name="wechat_payment_instruction">推荐安装微信5.0及以上版本使用</string>
    <string name="bank_card_payment">银行卡支付</string>
    <string name="bank_card_payment_instruction">支持储蓄卡信用卡，无需开通网银</string>
    <string name="confirm_recharge">确认充值</string>
    <string name="apply_for_invoice">申请发票</string>
    <string name="yuan">元</string>
    <string name="transaction_details">交易明细</string>
    <string name="price_indication">价格说明</string>
    <string name="withdraw_indication">提现说明</string>
    <string name="consumer_details_no">你还没有收入记录!</string>
    <string name="recharge_record_no">你还没有提现记录!</string>
    <string name="disciplinary_record_no">你还没有奖惩记录!</string>


    <string name="my_invoice">我的发票</string>
    <string name="the_number_of_apply_for_invoice">可申请发票金额</string>
    <string name="zero_point_zero">0.0</string>
    <string name="invoice_application_record">发票申请记录</string>
    <string name="no_invoice_application_record">暂无发票申请记录。</string>
    <string name="apply_for_invoice_toast">申请开发票金额不能小于最小发票金额：0元</string>
    <string name="apply_for_invoice_instruction">申请发票说明</string>
    <string name="apply_for_invoice_money">申请发票</string>
    <string name="invoice_type">发票类型</string>
    <string name="invoice_title">发票抬头</string>
    <string name="invoice_title_msg">请输入纳税人姓名</string>
    <string name="taxpayer_number">请输入纳税人识别号</string>
    <string name="taxpayer_details">收票人信息</string>
    <string name="taxpayer_phone">收票人手机</string>
    <string name="taxpayer_phone_msg">可用手机号在发票服务平台查询，必填</string>
    <string name="taxpayer_email">收票人邮箱</string>
    <string name="taxpayer_email_msg">用于接收电子发票的邮箱，选填</string>
    <string name="personal">个人</string>
    <string name="units">单位</string>
    <string name="invoice_paper">纸质发票</string>
    <string name="invoice_e">电子发票</string>
    <string name="invoice_explain">电子发票与纸质发票具有同等法律效力，可用于报销入账。</string>

    <string name="order_information">订单信息</string>
    <string name="another_order">再来一单</string>
    <string name="complain">投诉</string>

    <string name="order_progress">订单进度</string>
    <string name="order_details">订单详情</string>

    <string name="money_￥">¥</string>
    <string name="money">金额</string>
    <string name="the_order_number">订单号</string>
    <string name="time">时间</string>
    <string name="status">状态</string>

    <string name="premium_description">溢价说明</string>

    <string name="close_order">取消订单</string>
    <string name="order_closed">订单已关闭！</string>
    <string name="order_run_time">2017年6月27日 17：38：20</string>
    <string name="order_message">由于您超过30分钟未完成支付，订单已自动关闭</string>

    <string name="total">总价：</string>
    <string name="distance">距离：</string>
    <string name="km">公里</string>
    <string name="weight">重量：</string>
    <string name="kg">公斤</string>
    <string name="backslash">/</string>
    <string name="order_taking_address_user">赵女士</string>
    <string name="service_address_user">郭先生</string>
    <string name="order_taking_address_user_phone_number">01234567891</string>
    <string name="order_taking_time">取件时间：</string>
    <string name="immediate_fetch">立即取件</string>
    <string name="item_information">物品信息：</string>
    <string name="document">文件</string>
    <string name="remark_information">备注信息：</string>
    <string name="order_resource">订单来源：</string>
    <string name="APP_resource">APP端</string>
    <string name="payment">支付方式：</string>
    <string name="payment_online">在线支付</string>
    <string name="order_total_price">订单总价：</string>


    <string name="generic_server_down">连接超时</string>
    <string name="no_internet">网络异常</string>
    <string name="generic_error">网络忙</string>
    <string name="version_update">版本更新</string>

    <string name="today_earning">今日收入</string>
    <string name="completed_today">今日完成</string>
    <string name="unit_yuan">/元</string>
    <string name="unit_dan">/单</string>
    <string name="go_scramble">去抢单</string>
    <string name="today_order">今日单</string>
    <string name="refresh">刷新</string>
    <string name="please_describe_the_problems_you_have_encountered">请输入你要反馈的具体内容</string>


    <string name="disciplinary_type">类型：</string>
    <string name="disciplinary_time">时间：</string>
    <string name="disciplinary_money">金额：</string>
    <string name="disciplinary_msg">原因：</string>

</resources>
