<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/voucher_gray_light"
            android:hint="@string/input_true_name"
            android:padding="10dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_card"
            android:textSize="16sp" />

        <com.lst.lscourier.view.BandCardEditText
            android:id="@+id/bank_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/voucher_gray_light"
            android:hint="@string/input_bank_card"
            android:inputType="number"
            android:maxLength="23"
            android:padding="10dp"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/bank_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:paddingBottom="15dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/voucher_gray_light"
            android:hint="@string/input_withdraw_number"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textSize="16sp" />
    </LinearLayout>


    <Button
        android:id="@+id/confirm_withdraw"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_corner"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>