<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/list_educational_background_edittext_border"
    >
    <TextView
        android:id="@+id/primary_school"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/primary_school"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:background="@color/middle_gray"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        />
    <TextView
        android:id="@+id/junior_high_school"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/junior_high_school"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:background="@color/middle_gray"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        />
    <TextView
        android:id="@+id/senior_high_school"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/senior_high_school"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:background="@color/middle_gray"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        />
    <TextView
        android:id="@+id/junior_college"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/junior_college"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:background="@color/middle_gray"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        />
    <TextView
        android:id="@+id/undergraduate"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/undergraduate"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:background="@color/middle_gray"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        />
    <TextView
        android:id="@+id/postgraduate"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/postgraduate"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:background="@color/middle_gray"
        />
</LinearLayout>